--- a/views/paysuccess.hbs
+++ b/views/paysuccess.hbs
@@ -1,4 +1,4 @@
-do<html lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +10,15 @@ do<html lang="en">
 </head>
 <body>
     <style>
-        .container{
-            margin-top: 50px;
+        body{
+            text-align: center;
         }
     </style>
     <div>
         <div class="alert alert-success">
             <span class="glyphicon glyphicon-ok"></span>
-            <strong>thank you</strong>
-            <p>thank you for </p>
+            <h2><strong>Thank you</strong></h2>
+            <p>Your transaction was processed via Stripe</p>
         </div>
     </div>
     <!-- jQuery -->
