--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,20 +9,22 @@
     
 </head>
 <body>
-    <h1 class="page-header"> buy</h1>
+    
+    <h1 class="page-header">¡OFERTA!</h1>
     <div>
         <img src="https://img2.newchic.com/thumb/view/oaupload/newchic/images/5E/54/30912b17-c62d-933b-1dd7-c73b3152cd2b.jpg" alt="">
     </div>
     <div>
-        <h3>my clothes</h3>
-        <p>please bye this </p>
-        <h3>staojvef</h3>
-        <ul>
-            <li>this fog</li>
-            <li>he can o </li>
-            <li> hee njjhg</li>
-            <!-- "pk_test_cAXaaXXjYxU1O3z7UYR4fzHE" -->
-        </ul>
+        <h3>Sandalia Ipanema Damas Brasil</h3>
+        <h4>12 x s/ . 4.58</h4>
+        <h3>Panel footer</h3>
+        <h4> s/.55</h4>
+    <style>
+        body{
+            text-align: center
+        }
+    </style>
+
   <form action="/charge" method="post">
             <script 
             src="https://checkout.stripe.com/checkout.js"
